--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,7 @@ services:
 
   frontend:
     build: ./frontend
+    environment:
+      - API_URL=http://backend:4567
     ports:
-      - "5000:80"
+      - "5000:3000"
