Fix volume mounting failure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: ./backend
       dockerfile: Dockerfile.advanced
     volumes:
-      - "./backend/data.json:/usr/src/app/data.json"
+      - "./backend/data:/usr/src/app/data"
     environment:
       - APP_PORT=4567
 
