--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,16 @@
 version: "3.0"
+
+volumes:
+  web_data:
+    external: true
+
 services:
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile.advanced
     volumes:
-      - "./backend/data:/usr/src/app/data"
+      - "web_data:/usr/src/app/data"
     environment:
       - APP_PORT=4567
 
