--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.0"
+version: "3.7"
 
 volumes:
   web_data:
@@ -13,6 +13,7 @@ services:
       - "web_data:/usr/src/app/data"
     environment:
       - APP_PORT=4567
+    init: true
 
   frontend:
     build: ./frontend
